After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765328 - VteTerminalPrivate::search_find always returns false
VteTerminalPrivate::search_find always returns false
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: VTE Maintainers
VTE Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-04-20 14:41 UTC by alexander.maznev
Modified: 2016-08-01 22:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fixes vte_terminal_search_find always returning false (1.22 KB, patch)
2016-04-20 14:41 UTC, alexander.maznev
accepted-commit_now Details | Review

Description alexander.maznev 2016-04-20 14:41:07 UTC
Created attachment 326425 [details] [review]
fixes vte_terminal_search_find always returning false

It seems that the culprit commit is this one 72b1185d2e1b0c5b5b481fb9f8ca7701dbc5d4da which switched the default return state (but not all true cases will correctly update match_state to `true`
). Switching the default back to true should fix this.
Comment 1 Christian Persch 2016-04-20 16:42:59 UTC
Comment on attachment 326425 [details] [review]
fixes vte_terminal_search_find always returning false

Thanks! Ok to commit to master and cherry-pick -x to 0-44.
Comment 2 Christian Persch 2016-05-08 08:23:06 UTC
Pushed to master and 0-44, thanks!

For future reference, please use your full name in the git Author field.
Comment 3 Wolfgang Ulbrich 2016-07-24 19:56:23 UTC
I noticed that in fedora 24 with 
[root@mother rave]# rpm -qa vte291
vte291-0.44.2-1.fc24.x86_64

reverse search is broken with gnome-terminal and mate-terminal.
Same mate-terminal version works well in fedora 23 with vte291-0.42.x

Do we have a regression here?
Comment 4 Christian Persch 2016-08-01 18:45:42 UTC
This has nothing to do with reverse search. Quite possible it's a regression in vte; lease open a new bug for this, and if you can, try to bisect vte to find the commit responsible.
Comment 5 Wolfgang Ulbrich 2016-08-01 22:40:17 UTC
done
https://bugzilla.gnome.org/show_bug.cgi?id=769400