terminal: Fix search return value

vte_terminal_search_find was always returning FALSE.

https://bugzilla.gnome.org/show_bug.cgi?id=765328
(cherry picked from commit 2b05a52f318f3f9b10ef3784a18e69ba4f04d79e)